--- a/tool/cfgs/dataset_configs/kitti_dataset.yaml
+++ b/tool/cfgs/dataset_configs/kitti_dataset.yaml
@@ -14,7 +14,7 @@ INFO_PATH: {
 }
 
 GET_ITEM_LIST: ["points"]
-FOV_POINTS_ONLY: True
+FOV_POINTS_ONLY: True # 只取前方的点
 
 DATA_AUGMENTOR:
     DISABLE_AUG_LIST: ['placeholder']
